Token analytics date selector

--- a/src/app/modules/analytics/global-tokens/global-tokens.component.ng.scss
+++ b/src/app/modules/analytics/global-tokens/global-tokens.component.ng.scss
@@ -115,4 +115,35 @@
       }
     }
   }
+
+  .m-analyticsGlobalTokens__dateSelectorContainer {
+    padding: 20px 20px 10px 20px;
+  }
+
+  ::ng-deep m-date-selector {
+    display: inline-block;
+
+    .m-dateSelector__label {
+      margin-right: 10px;
+      text-transform: capitalize;
+      letter-spacing: inherit;
+      font-size: 15px;
+    }
+    .m-dateSelector__input {
+      font-size: 15px;
+      @include m-theme() {
+        border: 1px solid themed($m-borderColor--primary);
+      }
+    }
+  }
+
+  ::ng-deep m-tooltip {
+    margin-left: 10px;
+    i {
+      font-size: 17px;
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+    }
+  }
 }
