Token analytics date dropdown 2

--- a/src/app/modules/analytics/global-tokens/global-tokens.component.html
+++ b/src/app/modules/analytics/global-tokens/global-tokens.component.html
@@ -36,6 +36,23 @@
   </a>
 </div>
 
+<div
+  class="m-analyticsGlobalTokens__dateSelectorContainer"
+  *ngIf="session.isAdmin()"
+>
+  <m-date-selector
+    label="Date"
+    [date]="endDate"
+    [max]="maxDate"
+    [min]="minDate"
+    (dateChange)="onEndDateChange($event)"
+  ></m-date-selector>
+  <m-tooltip icon="info"
+    >Date selector displays values for selected dates in GMT time. Visible to
+    admins only</m-tooltip
+  >
+</div>
+
 <m-loadingSpinner [inProgress]="inProgress$ | async"></m-loadingSpinner>
 
 <div class="m-analyticsGlobalTokens__metrics">
