--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -1,10 +1,18 @@
-<div class="m-tabs__container">
+<div class="m-tabs__container" *mExperiment="'top-feed'; variation: 'on'">
   <div class="m-tabs__tab">
     <a
       routerLink="../top"
       routerLinkActive="m-tabs__tab--selected"
       i18n="@@DISCOVERY_SEARCH__TOP"
       >Top</a
+    >
+  </div>
+  <div class="m-tabs__tab">
+    <a
+      routerLink="../relevant"
+      routerLinkActive="m-tabs__tab--selected"
+      i18n="@@DISCOVERY_SEARCH__LATEST"
+      >Relevant</a
     >
   </div>
   <div class="m-tabs__tab">
