--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -7,14 +7,14 @@
       >Top</a
     >
   </div>
-  <div class="m-tabs__tab">
+  <!-- <div class="m-tabs__tab">
     <a
       routerLink="../relevant"
       routerLinkActive="m-tabs__tab--selected"
       i18n="@@DISCOVERY_SEARCH__LATEST"
       >Relevant</a
     >
-  </div>
+  </div> -->
   <div class="m-tabs__tab">
     <a
       routerLink="../latest"
