--- a/src/app/modules/wallet/components/tokens/balance/balance-tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/balance/balance-tokens.component.html
@@ -1,69 +1,79 @@
 <ng-container *ngIf="!inProgress; else loading">
   <ng-container *mIfFeature="'wallet-v3'; else walletV2">
-    <m-wallet__balance class="m-wallet__balance--primary">
-      <ng-container m-walletBalance__brief>
-        <m-wallet__currencyValue
-          [value]="wallet.tokens.balance"
-          currency="tokens"
-        ></m-wallet__currencyValue>
-      </ng-container>
-      <ng-container m-walletBalance__expanded>
-        <h4>Off-chain</h4>
-        <b>
+    <div class="m-wallet__balance__leftContainer">
+      <m-wallet__balance class="m-wallet__balance--primary">
+        <ng-container m-walletBalance__brief>
           <m-wallet__currencyValue
-            [value]="wallet.offchain.balance"
+            [value]="wallet.tokens.balance"
             currency="tokens"
           ></m-wallet__currencyValue>
-        </b>
-        <div class="m-layout__spacer"></div>
-        <h4>On-chain</h4>
-        <b
-          ><m-wallet__currencyValue
-            [value]="wallet.onchain.balance"
-            currency="tokens"
-          ></m-wallet__currencyValue>
-        </b>
-      </ng-container>
-    </m-wallet__balance>
-    <span style="width:10px; display: inline-block;"></span>
-    <m-wallet__balance>
-      <ng-container m-walletBalance__brief>
-        <m-wallet__currencyValue
-          [value]="wallet.eth.balance"
-          currency="eth"
-        ></m-wallet__currencyValue>
-      </ng-container>
-      <ng-container m-walletBalance__address>
-        <ng-container *ngIf="isConnected; else connectWalletEl">
-          <div class="m-walletBalanceAddress__inner">
-            <span>{{ truncatedOnchainAddress }}</span>
-            <m-tooltip icon="check_circle">Your address is verified</m-tooltip>
-          </div>
         </ng-container>
-        <ng-template #connectWalletEl>
-          <div
-            class="m-walletBalanceAddress__inner--connect"
-            (click)="connectWallet($event)"
-            *ngIf="isConnected === false"
-          >
-            <span *ngIf="!wallet.receiver.address">Connect Wallet</span>
-            <span *ngIf="wallet.receiver.address">Reconnect Wallet</span>
-            <m-tooltip icon="add_circle"
-              >Connect your address to start earnings rewards</m-tooltip
+        <ng-container m-walletBalance__expanded>
+          <h4>Off-chain</h4>
+          <b>
+            <m-wallet__currencyValue
+              [value]="wallet.offchain.balance"
+              currency="tokens"
+            ></m-wallet__currencyValue>
+          </b>
+          <div class="m-layout__spacer"></div>
+          <h4>On-chain</h4>
+          <b
+            ><m-wallet__currencyValue
+              [value]="wallet.onchain.balance"
+              currency="tokens"
+            ></m-wallet__currencyValue>
+          </b>
+        </ng-container>
+      </m-wallet__balance>
+      <span style="width:10px; display: inline-block;"></span>
+      <m-wallet__balance>
+        <ng-container m-walletBalance__brief>
+          <m-wallet__currencyValue
+            [value]="wallet.eth.balance"
+            currency="eth"
+          ></m-wallet__currencyValue>
+        </ng-container>
+        <ng-container m-walletBalance__address>
+          <ng-container *ngIf="isConnected; else connectWalletEl">
+            <div class="m-walletBalanceAddress__inner">
+              <span>{{ truncatedOnchainAddress }}</span>
+              <m-tooltip icon="check_circle"
+                >Your address is verified</m-tooltip
+              >
+            </div>
+          </ng-container>
+          <ng-template #connectWalletEl>
+            <div
+              class="m-walletBalanceAddress__inner--connect"
+              (click)="connectWallet($event)"
+              *ngIf="isConnected === false"
             >
-          </div>
+              <span *ngIf="!wallet.receiver.address">Connect Wallet</span>
+              <span *ngIf="wallet.receiver.address">Reconnect Wallet</span>
+              <m-tooltip icon="add_circle"
+                >Connect your address to start earnings rewards</m-tooltip
+              >
+            </div>
 
-          <div
-            class="m-walletBalanceAddress__inner--connect"
-            *ngIf="isConnected !== false"
-          >
-            <span>...</span>
-          </div>
-        </ng-template>
-      </ng-container>
-    </m-wallet__balance>
+            <div
+              class="m-walletBalanceAddress__inner--connect"
+              *ngIf="isConnected !== false"
+            >
+              <span>...</span>
+            </div>
+          </ng-template>
+        </ng-container>
+      </m-wallet__balance>
 
-    <m-walletTokens__dropdownMenu></m-walletTokens__dropdownMenu>
+      <m-walletTokens__dropdownMenu></m-walletTokens__dropdownMenu>
+    </div>
+    <div
+      class="m-wallet__balance__rightContainer"
+      *ngIf="shouldShowNetworkSwitcher()"
+    >
+      <m-walletNetworkSwitcher></m-walletNetworkSwitcher>
+    </div>
   </ng-container>
 
   <ng-template #walletV2>
