--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -52,28 +52,47 @@
   <m-discovery__tagWidget></m-discovery__tagWidget>
 
   <div class="m-discoveryFeeds__feed">
-    <m-discovery__feedItem
-      *ngFor="let entity$ of entities | slice: 0:2"
-      [entity]="entity$ | async"
-    ></m-discovery__feedItem>
-    <!-- ---------------------- -->
     <ng-container
-      *ngIf="!(inProgress$ | async) && !(cardCarouselInProgress$ | async)"
-      ><m-discovery__cardCarousel
+      *ngFor="let entity$ of service.entities$ | async; let i = index"
+    >
+      <!-- ---------------------- -->
+      <!-- SEARCH RESULTS -->
+      <!-- ---------------------- -->
+      <m-discovery__feedItem
+        *ngIf="entity$ | async as entity"
+        [entity]="entity"
+      ></m-discovery__feedItem>
+      <!-- ---------------------- -->
+      <!-- SUGGESTED CHANNELS -->
+      <!-- ---------------------- -->
+      <ng-container
         *ngIf="
-          (cardCarouselService.searchCards$ | async) &&
-          (filter === 'top' || filter === 'latest')
+          !(inProgress$ | async) &&
+          !(cardCarouselInProgress$ | async) &&
+          i === 1
         "
-        type="search"
-        [q]="q"
-      ></m-discovery__cardCarousel>
+        ><m-discovery__cardCarousel
+          *ngIf="
+            (cardCarouselService.searchCards$ | async) &&
+            (filter === 'top' || filter === 'latest')
+          "
+          type="search"
+          [q]="q"
+        ></m-discovery__cardCarousel>
+      </ng-container>
+      <!-- ---------------------- -->
+      <!-- BOOSTS -->
+      <!-- ---------------------- -->
+      <m-featured-content
+        *ngIf="(i > 0 && i % 5 === 0) || i === 1"
+        [slot]="i + 1"
+        [displayOptions]="{
+          showOnlyCommentsInput: true,
+          isFeed: true
+        }"
+      ></m-featured-content>
+      <!-- ---------------------- -->
     </ng-container>
-    <!-- ---------------------- -->
-    <m-discovery__feedItem
-      *ngFor="let entity$ of entities | slice: 2"
-      [entity]="entity$ | async"
-    ></m-discovery__feedItem>
-
     <infinite-scroll
       distance="25%"
       (load)="loadMore()"
