--- a/src/app/common/components/subscribe-button/subscribe-button.component.html
+++ b/src/app/common/components/subscribe-button/subscribe-button.component.html
@@ -1,33 +1,37 @@
-<m-button
-  *ngIf="!_user.subscribed"
-  (onAction)="subscribe($event)"
-  size="xsmall"
-  color="blue"
-  [iconOnly]="iconOnly"
-  title="Subscribe"
-  [disabled]="disableSubscribe"
->
-  <i class="material-icons">
-    add
-  </i>
-  <span *ngIf="!iconOnly">
-    <ng-container i18n="@@M__ACTION__SUBSCRIBE">Subscribe</ng-container>
-  </span>
-</m-button>
-<m-button
-  *ngIf="_user.subscribed"
-  (onAction)="unsubscribe($event)"
-  size="xsmall"
-  [iconOnly]="iconOnly"
-  title="Unsubscribe"
-  [disabled]="disableSubscribe"
->
-  <i class="material-icons">
-    close
-  </i>
-  <span *ngIf="!iconOnly">
-    <ng-container i18n="@@MINDS__BUTTONS__UNSUBSCRIBE__SUBSCRIBED_LABEL"
-      >Unsubscribe</ng-container
-    >
-  </span>
-</m-button>
+<ng-container *ngIf="sized">
+  <m-button
+    *ngIf="!subscribed"
+    (onAction)="subscribe($event)"
+    size="xsmall"
+    color="blue"
+    [iconOnly]="iconOnly"
+    title="Subscribe"
+    [saving]="inProgress"
+    [disabled]="inProgress || disableSubscribe"
+  >
+    <i class="material-icons">
+      add
+    </i>
+    <span *ngIf="!iconOnly">
+      <ng-container i18n="@@M__ACTION__SUBSCRIBE">Subscribe</ng-container>
+    </span>
+  </m-button>
+  <m-button
+    *ngIf="subscribed"
+    (onAction)="unsubscribe($event)"
+    size="xsmall"
+    [iconOnly]="iconOnly"
+    title="Unsubscribe"
+    [saving]="inProgress"
+    [disabled]="inProgress || disableSubscribe"
+  >
+    <i class="material-icons">
+      close
+    </i>
+    <span *ngIf="!iconOnly">
+      <ng-container i18n="@@MINDS__BUTTONS__UNSUBSCRIBE__SUBSCRIBED_LABEL"
+        >Unsubscribe</ng-container
+      >
+    </span>
+  </m-button>
+</ng-container>
