--- a/src/app/modules/comments/list/list.component.scss
+++ b/src/app/modules/comments/list/list.component.scss
@@ -52,7 +52,7 @@ m-comments__entityOutlet,
 
     .minds-body {
       font-size: 12px;
-      max-width: 89%;
+      max-width: calc(100% - 55px);
 
       @media screen and (max-width: $max-mobile) {
         max-width: 100%;
