Only recheck subscription status for hovercards

--- a/src/app/common/components/publisher-card/publisher-card.component.html
+++ b/src/app/common/components/publisher-card/publisher-card.component.html
@@ -58,6 +58,7 @@
         [sized]="sized"
         [iconOnly]="btnIconOnly"
         [disableSubscribe]="disableSubscribe"
+        [enableRecheck]="recheckSubscribed"
       ></m-subscribeButton>
       <!-- For groups -->
       <ng-content
