--- a/src/app/modules/wallet/components/network-switcher/network-switcher.component.ng.scss
+++ b/src/app/modules/wallet/components/network-switcher/network-switcher.component.ng.scss
@@ -2,21 +2,45 @@
 
 :host {
   .m-networkSwitcher__currentNetwork {
+    display: flex;
+    flex-flow: row nowrap;
     background-color: unset;
     font-size: 16px;
     font-weight: 400;
     cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 3px;
+    max-width: 200px;
+    width: fit-content;
 
     @include m-theme() {
-      color: themed($m-textColor--secondary);
+      color: themed($m-textColor--primary);
+      border: 1px solid themed($m-borderColor--primary);
+
+      &:hover {
+        background-color: themed($m-bgColor--secondary);
+      }
+    }
+
+    .m-networkSwitcher__currentNetwork--light {
+      font-weight: 400;
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
     }
   }
+
   .m-networkSwitcher__optionDropdown {
     position: absolute;
     right: -5px;
     margin-top: 10px;
     border-radius: 3px;
     width: 300px;
+
+    @media screen and (max-width: $min-tablet) {
+      right: unset;
+      left: 0;
+    }
 
     @include z-index(tooltip);
 
@@ -25,42 +49,94 @@
       background-color: themed($m-bgColor--primaryAlt);
     }
 
-    padding: 20px 0;
-
     .m-networkSwitcher__optionContainer {
-      padding: 15px 20px;
+      padding: 20px;
       display: flex;
-      flex-direction: column;
+      flex-flow: column nowrap;
       cursor: pointer;
+
       &:hover {
         @include m-theme() {
           background-color: themed($m-bgColor--secondaryAlt);
         }
       }
 
-      img {
-        max-width: 30px;
-        margin-right: 5px;
-      }
+      .m-networkSwitcher__option {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
 
-      .m-networkSwitcher__optionName {
-        font-size: 16px;
-        font-weight: 400;
-        margin-bottom: 5px;
+        img {
+          max-width: 35px;
+          max-height: 35px;
+          margin-right: 15px;
+        }
 
-        @include m-theme() {
-          color: themed($m-textColor--primary);
+        .m-networkSwitcher__chainInformation {
+          .m-networkSwitcher__optionName {
+            font-size: 16px;
+            font-weight: 500;
+            margin-bottom: 5px;
+
+            @include m-theme() {
+              color: themed($m-textColor--primary);
+            }
+          }
+
+          .m-networkSwitcher__optionDescription {
+            font-size: 14px;
+            font-weight: 400;
+
+            @include m-theme() {
+              color: themed($m-textColor--secondary);
+            }
+          }
+        }
+
+        .m-networkSwitcher__optionIcon {
+          position: absolute;
+          right: 25px;
+          width: 15px;
+          height: 15px;
+
+          @include m-theme() {
+            fill: themed($m-black);
+          }
         }
       }
+    }
+  }
 
-      .m-networkSwitcher__optionDescription {
-        font-size: 14px;
-        font-weight: 400;
+  // adapted from arrow box generated at https://cssarrowplease.com/
+  .m-networkSwitcher__arrowBox:after,
+  .m-networkSwitcher__arrowBox:before {
+    bottom: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: '';
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+  }
 
-        @include m-theme() {
-          color: themed($m-textColor--secondary);
-        }
-      }
+  .m-networkSwitcher__arrowBox:after {
+    border-width: 8px;
+    margin-left: -8px;
+    border-color: rgba(0, 0, 0, 0);
+
+    @include m-theme() {
+      border-bottom-color: themed($m-bgColor--secondaryAlt);
+    }
+  }
+
+  .m-networkSwitcher__arrowBox:before {
+    border-width: 9px;
+    margin-left: -9px;
+    border-color: rgba(0, 0, 0, 0);
+
+    @include m-theme() {
+      border-bottom-color: themed($m-borderColor--primary);
     }
   }
 }
