fix max width of web3modal

--- a/src/app/modules/layout/page/page.component.ng.scss
+++ b/src/app/modules/layout/page/page.component.ng.scss
@@ -7,6 +7,10 @@
         @include z-index(modal--stackable);
         display: block;
         position: unset;
+
+        .m-web3Modal {
+          max-width: 800px !important;
+        }
       }
     }
   }
