--- a/src/app/modules/app-prompt/app-prompt.component.ng.scss
+++ b/src/app/modules/app-prompt/app-prompt.component.ng.scss
@@ -26,7 +26,7 @@
     @include m-theme() {
       background-color: themed($m-bgColor--primaryInverted);
       color: themed($m-textColor--primaryInverted);
-      border: 1px solid themed($m-borderColor--primary);
+      border-top: 1px solid themed($m-borderColor--primary);
     }
   }
 
