--- a/src/app/common/components/slider/slider.component.html
+++ b/src/app/common/components/slider/slider.component.html
@@ -1,22 +1,28 @@
-<div class="m-slider__container">
-  <span
-    *ngIf="minLabel"
-    class="m-slider__rangeLabel m-slider__rangeLabel--min"
-    >{{ minLabel }}</span
-  >
-  <input
-    type="range"
-    [min]="min"
-    [max]="max"
-    [step]="step"
-    [value]="value"
-    [id]="id"
-    (input)="onSlide($event.target.value)"
-    class="m-slider__input"
-  />
-  <span
-    *ngIf="maxLabel"
-    class="m-slider__rangeLabel m-slider__rangeLabel--max"
-    >{{ maxLabel }}</span
-  >
+<div class="m-formInput__slider m-form__field--range">
+  <div *ngIf="title" class="m-form__row--label">
+    <label [for]="id" class="m-formInputSlider__title">{{ title }}</label>
+  </div>
+  <div class="m-form__row--input">
+    <span
+      *ngIf="minLabel"
+      class="m-formInputSlider__rangeLabel m-formInputSlider__rangeLabel--min"
+      >{{ minLabel }}</span
+    >
+    <input
+      class="m-formInputSlider__input"
+      type="range"
+      [ngModel]="value"
+      (ngModelChange)="updateValue($event)"
+      [min]="min"
+      [max]="max"
+      [step]="step"
+      [value]="value"
+      [id]="id"
+    />
+    <span
+      *ngIf="maxLabel"
+      class="m-formInputSlider__rangeLabel m-formInputSlider__rangeLabel--max"
+      >{{ maxLabel }}</span
+    >
+  </div>
 </div>
