Social compass module

--- a/src/app/modules/compass/compass-questionnaire-banner/compass-questionnaire-banner.component.ng.scss
+++ b/src/app/modules/compass/compass-questionnaire-banner/compass-questionnaire-banner.component.ng.scss
@@ -1,8 +1,7 @@
 @import 'defaults.scss';
 @import '../../../common/layout/layout.scss';
 
-// ojm layout import
-
+// check on mobile designs
 :host {
   .m-compassQuestionnaire__banner {
     display: flex;
