--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -128,6 +128,7 @@
         [style.height]="imageHeight"
         (error)="onImageError($event)"
         (click)="onModalRequested($event)"
+        [m-blurhash]="service.entity$ | async"
     /></ng-template>
   </div>
 </ng-container>
