--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -19,6 +19,7 @@
         class="m-sidebarNavigation__item m-sidebarNavigation__item--compose"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
         [routerLinkActiveOptions]="{ exact: true }"
+        *ngIf="user"
       >
         <a (click)="openComposeModal()">
           <m-tooltip
@@ -44,6 +45,7 @@
       <li
         class="m-sidebarNavigation__item"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        *ngIf="user"
       >
         <a [routerLink]="['/newsfeed/subscriptions']" (click)="toggle()">
           <m-tooltip
@@ -66,7 +68,10 @@
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
         [routerLinkActiveOptions]="{ exact: plusPageActive }"
       >
-        <a routerLink="/discovery" (click)="toggle()">
+        <a
+          [routerLink]="shouldBeDiscoveryHomepage() ? '/' : '/discovery'"
+          (click)="toggle()"
+        >
           <m-tooltip
             [enabled]="!showLabels"
             [anchor]="'left'"
@@ -88,7 +93,7 @@
         [routerLinkActiveOptions]="{ exact: !plusPageActive }"
         *mIfFeature="'nav-plus-2020'"
       >
-        <a routerLink="/discovery/plus" (click)="toggle()">
+        <a routerLink="/discovery/plus/overview" (click)="toggle()">
           <m-tooltip
             [enabled]="!showLabels"
             [anchor]="'left'"
@@ -107,6 +112,7 @@
       <li
         class="m-sidebarNavigation__item"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        *ngIf="user"
       >
         <a [routerLink]="['/wallet']" (click)="toggle()">
           <m-tooltip
@@ -154,6 +160,7 @@
       <li
         class="m-sidebarNavigation__item"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        *ngIf="user"
       >
         <a routerLink="/analytics" (click)="toggle()">
           <m-tooltip
@@ -227,96 +234,102 @@
           </li>
         </ul>
       </li>
+      <ng-container *ngIf="user">
+        <li
+          class="m-sidebarNavigation__item"
+          [routerLinkActive]="'m-sidebarNavigation__item--active'"
+          [routerLinkActiveOptions]="{ exact: true }"
+          *mIfFeature="'earn-modal'"
+        >
+          <a (click)="openEarnModal()">
+            <m-tooltip
+              [enabled]="!showLabels"
+              [anchor]="'left'"
+              [useParentPosition]="true"
+            >
+              <i class="material-icons" m-tooltip--anchor>attach_money</i>
+              <ng-container i18n="@@COMMON__EARN">Earn</ng-container>
+            </m-tooltip>
 
-      <li
-        class="m-sidebarNavigation__item"
-        [routerLinkActive]="'m-sidebarNavigation__item--active'"
-        [routerLinkActiveOptions]="{ exact: true }"
-        *mIfFeature="'earn-modal'"
-      >
-        <a (click)="openEarnModal()">
-          <m-tooltip
-            [enabled]="!showLabels"
-            [anchor]="'left'"
-            [useParentPosition]="true"
-          >
-            <i class="material-icons" m-tooltip--anchor>attach_money</i>
-            <ng-container i18n="@@COMMON__EARN">Earn</ng-container>
-          </m-tooltip>
+            <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__EARN"
+              >Earn</span
+            >
+          </a>
+        </li>
+      </ng-container>
+      <ng-container *ngIf="user">
+        <li
+          class="m-sidebarNavigation__item"
+          [routerLinkActive]="'m-sidebarNavigation__item--active'"
+          [routerLinkActiveOptions]="{ exact: true }"
+          *mIfFeature="'buy-tokens-uniswap-transak'"
+        >
+          <a (click)="buyTokens()">
+            <m-tooltip
+              [enabled]="!showLabels"
+              [anchor]="'left'"
+              [useParentPosition]="true"
+            >
+              <m-icon from="custom" iconId="wallet" m-tooltip--icon></m-icon>
+              <ng-container i18n="@@COMMON__BUY_CRYPTO"
+                >Buy Crypto</ng-container
+              >
+            </m-tooltip>
 
-          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__EARN"
-            >Earn</span
-          >
-        </a>
-      </li>
+            <span
+              class="m-sidebarNavigationItem__text"
+              i18n="@@COMMON__BUY_CRYPTO"
+              >Buy Crypto</span
+            >
+          </a>
+        </li>
+      </ng-container>
+      <ng-container *ngIf="user">
+        <li
+          class="m-sidebarNavigation__item"
+          [routerLinkActive]="'m-sidebarNavigation__item--active'"
+          [routerLinkActiveOptions]="{ exact: true }"
+          *mIfFeature="'boost-modal-v2'"
+        >
+          <a (click)="openBoostModal()">
+            <m-tooltip
+              [enabled]="!showLabels"
+              [anchor]="'left'"
+              [useParentPosition]="true"
+            >
+              <m-icon iconId="trending_up" m-tooltip--icon></m-icon>
+              <ng-container>Boost your channel</ng-container>
+            </m-tooltip>
 
-      <li
-        class="m-sidebarNavigation__item"
-        [routerLinkActive]="'m-sidebarNavigation__item--active'"
-        [routerLinkActiveOptions]="{ exact: true }"
-        *mIfFeature="'buy-tokens-uniswap-transak'"
-      >
-        <a (click)="buyTokens()">
-          <m-tooltip
-            [enabled]="!showLabels"
-            [anchor]="'left'"
-            [useParentPosition]="true"
-          >
-            <m-icon from="custom" iconId="wallet" m-tooltip--icon></m-icon>
-            <ng-container i18n="@@COMMON__BUY_CRYPTO">Buy Crypto</ng-container>
-          </m-tooltip>
+            <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__BOOST"
+              >Boost</span
+            >
+          </a>
+        </li>
+      </ng-container>
 
-          <span
-            class="m-sidebarNavigationItem__text"
-            i18n="@@COMMON__BUY_CRYPTO"
-            >Buy Crypto</span
-          >
-        </a>
-      </li>
-
-      <li
-        class="m-sidebarNavigation__item"
-        [routerLinkActive]="'m-sidebarNavigation__item--active'"
-        [routerLinkActiveOptions]="{ exact: true }"
-        *mIfFeature="'boost-modal-v2'"
-      >
-        <a (click)="openBoostModal()">
-          <m-tooltip
-            [enabled]="!showLabels"
-            [anchor]="'left'"
-            [useParentPosition]="true"
-          >
-            <m-icon iconId="trending_up" m-tooltip--icon></m-icon>
-            <ng-container>Boost your channel</ng-container>
-          </m-tooltip>
-
-          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__BOOST"
-            >Boost</span
-          >
-        </a>
-      </li>
-
-      <li
-        *mIfFeature="'matrix'"
-        class="m-sidebarNavigation__item"
-        [routerLinkActive]="'m-sidebarNavigation__item--active'"
-        [routerLinkActiveOptions]="{ exact: true }"
-      >
-        <a [routerLink]="['/groups/memberships']" (click)="toggle()">
-          <m-tooltip
-            [enabled]="!showLabels"
-            [anchor]="'left'"
-            [useParentPosition]="true"
-          >
-            <i class="material-icons" m-tooltip--anchor>group</i>
-            <ng-container i18n="@@COMMON__GROUPS">Groups</ng-container>
-          </m-tooltip>
-          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__GROUPS"
-            >Groups</span
-          >
-        </a>
-      </li>
-
+      <ng-container *ngIf="user">
+        <li
+          *mIfFeature="'matrix'"
+          class="m-sidebarNavigation__item"
+          [routerLinkActive]="'m-sidebarNavigation__item--active'"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
+          <a [routerLink]="['/groups/memberships']" (click)="toggle()">
+            <m-tooltip
+              [enabled]="!showLabels"
+              [anchor]="'left'"
+              [useParentPosition]="true"
+            >
+              <i class="material-icons" m-tooltip--anchor>group</i>
+              <ng-container i18n="@@COMMON__GROUPS">Groups</ng-container>
+            </m-tooltip>
+            <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__GROUPS"
+              >Groups</span
+            >
+          </a>
+        </li>
+      </ng-container>
       <li
         *ngIf="user && !matrixFeature"
         class="m-sidebarNavigation__item m-sidebarNavigation__item--user"
@@ -336,6 +349,7 @@
       <li
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
         class="m-sidebarNavigation__item"
+        *ngIf="user"
       >
         <a [routerLink]="[settingsLink]" (click)="toggle()">
           <m-tooltip
@@ -352,6 +366,28 @@
           >
         </a>
       </li>
+      <ng-container *ngIf="!user">
+        <li
+          class="m-sidebarNavigation__item"
+          [routerLinkActive]="'m-sidebarNavigation__item--active'"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
+          <a (click)="openAuthModal()">
+            <m-tooltip
+              [enabled]="!showLabels"
+              [anchor]="'left'"
+              [useParentPosition]="true"
+            >
+              <i class="material-icons" m-tooltip--anchor>more_horiz</i>
+              <ng-container i18n="@@COMMON__MORE">More</ng-container>
+            </m-tooltip>
+
+            <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__MORE"
+              >More</span
+            >
+          </a>
+        </li>
+      </ng-container>
     </ul>
   </nav>
 
