Fixes for SEO and recommendations in guest mode

--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -31,6 +31,7 @@
   </li>
   <!-- ---------------------- -->
   <m-discovery__cardCarousel
+    *ngIf="showChannels"
     type="suggestions"
     class="m-discoveryTrends__trend"
   ></m-discovery__cardCarousel>
