--- a/src/app/common/components/join-banner/join-banner.component.html
+++ b/src/app/common/components/join-banner/join-banner.component.html
@@ -3,19 +3,26 @@
     >close</i
   >
   <div class="m-joinBanner__container">
-    <img
-      class="m-joinBanner__logo"
-      [src]="cdnAssetsUrl + 'assets/logos/logo-light-mode.svg'"
-    />
-    <p class="m-joinBanner__text">
-      We are building an open source & decentralized social network dedicated to
-      privacy, free expression, rev-sharing and helping creators thrive.
-    </p>
+    <div class="m-joinBanner__container--left">
+      <img
+        class="m-joinBanner__logo"
+        [src]="cdnAssetsUrl + 'assets/logos/logo-light-mode.svg'"
+      />
+      <span
+        class="m-joinBanner__text"
+        i18n="@@JOIN_BANNER__SPEAK_FREELY_EARN_CRYPTO"
+      >
+        Speak freely and earn crypto.
+      </span>
+    </div>
     <m-button
       [color]="'blue'"
       (onAction)="join()"
       class="m-joinBanner__joinButton"
-      >Join Minds</m-button
     >
+      <ng-container i18n="@@JOIN_BANNER__JOIN_MINDS">
+        Join Minds
+      </ng-container>
+    </m-button>
   </div>
 </div>
