--- a/src/stylesheets/themes.scss
+++ b/src/stylesheets/themes.scss
@@ -92,6 +92,7 @@ $themes: (
     m-textColor--primary: #43434d,
     m-textColor--primaryInverted: #ffffff,
     m-textColor--secondary: #72727c,
+    m-textColor--secondaryInverted: #b8c1ca,
     m-textColor--tertiary: #9b9b9b,
     m-bgColor--primary: #ffffff,
     m-bgColor--primaryInverted: #242a30,
@@ -169,6 +170,7 @@ $themes: (
     m-textColor--primary: #ffffff,
     m-textColor--primaryInverted: #43434d,
     m-textColor--secondary: #b8c1ca,
+    m-textColor--secondaryInverted: #72727c,
     m-textColor--tertiary: #797b82,
     m-bgColor--primary: #242a30,
     m-bgColor--primaryInverted: #ffffff,
@@ -307,6 +309,7 @@ $m-linkedin: 'm-linkedin';
 $m-textColor--primary: 'm-textColor--primary';
 $m-textColor--primaryInverted: 'm-textColor--primaryInverted';
 $m-textColor--secondary: 'm-textColor--secondary';
+$m-textColor--secondaryInverted: 'm-textColor--secondaryInverted';
 $m-textColor--tertiary: 'm-textColor--tertiary';
 $m-bgColor--primary: 'm-bgColor--primary';
 $m-bgColor--primaryInverted: 'm-bgColor--primaryInverted';
