(chore): remove top feed experiment

--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -1,4 +1,4 @@
-<div class="m-tabs__container" *mExperiment="'top-feed'; variation: 'on'">
+<div class="m-tabs__container">
   <div class="m-tabs__tab">
     <a
       routerLink="../top"
