pass tests and add data-cy tags

--- a/src/app/common/components/slider/slider.component.html
+++ b/src/app/common/components/slider/slider.component.html
@@ -1,4 +1,7 @@
-<div class="m-formInput__slider m-form__field--range">
+<div
+  class="m-formInput__slider m-form__field--range"
+  data-cy="form-input-slider"
+>
   <div *ngIf="title" class="m-form__row--label">
     <label [for]="id" class="m-formInputSlider__title">{{ title }}</label>
   </div>
