--- a/src/app/modules/compass/compass-questionnaire-modal/compass-questionnaire-modal.component.html
+++ b/src/app/modules/compass/compass-questionnaire-modal/compass-questionnaire-modal.component.html
@@ -1,4 +1,7 @@
-<div class="m-compassQuestionnaire__modal">
+<div
+  class="m-compassQuestionnaire__modal"
+  data-cy="social-compass-questionnaire-modal"
+>
   <div class="m-compassQuestionnaireModal__main">
     <span class="m-compassQuestionnaireModal__title">Help improve Minds</span>
     <span class="m-compassQuestionnaireModal__subtitle"
