--- a/src/app/modules/compass/compass-questionnaire-banner/compass-questionnaire-banner.component.html
+++ b/src/app/modules/compass/compass-questionnaire-banner/compass-questionnaire-banner.component.html
@@ -1,5 +1,8 @@
 <ng-container *ngIf="show">
-  <div class="m-compassQuestionnaire__banner">
+  <div
+    class="m-compassQuestionnaire__banner"
+    data-cy="social-compass-questionnaire-banner"
+  >
     <div class="m-compassQuestionnaireBanner__contentWrapper">
       <div class="m-compassQuestionnaireBanner__textWrapper">
         <span class="m-compassQuestionnaireBanner__title"
@@ -10,7 +13,10 @@
         >
       </div>
       <div class="m-compassQuestionnaireBanner__buttonWrapper">
-        <m-button [color]="'blue'" (onAction)="openModal()"
+        <m-button
+          data-cy="social-compass-questionnaire-banner-button"
+          [color]="'blue'"
+          (onAction)="openModal()"
           >Questionnaire</m-button
         >
       </div>
