--- a/src/app/modules/wallet/components/tokens/skale/skale.component.ng.scss
+++ b/src/app/modules/wallet/components/tokens/skale/skale.component.ng.scss
@@ -1,73 +1,32 @@
 @import 'defaults.scss';
 
 :host {
-  font-weight: 400;
-  font-size: 15px;
-
-  h6 {
-    font-weight: 500;
-  }
-
-  @include m-theme() {
-    color: themed($m-textColor--primary);
-  }
-
-  .m-skale__body {
+  .m-skale__subTabs {
     display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
+    flex-flow: row nowrap;
+    margin-bottom: 20px;
 
-    .m-skale__tokenConverter {
-      width: 400px;
-      display: flex;
-      flex-flow: column nowrap;
-      align-items: center;
-      padding: 20px;
-      border-radius: 25px;
-
-      @include m-theme() {
-        background: themed($m-bgColor--secondary);
-        border: 1px solid themed($m-borderColor--primary);
-      }
-
-      .m-skale__swapButton {
-        cursor: pointer;
-        padding: 10px;
-        border-radius: 25px;
-        margin-top: 20px;
-
-        @include m-theme() {
-          background: themed($m-bgColor--primary);
-          border: 1px solid themed($m-borderColor--primary);
-
-          &:hover {
-            background: themed($m-bgColor--secondary);
-          }
-        }
-      }
-
-      .m-skale__outputAmount {
-        margin: 20px;
-      }
-
-      .m-skale__buttonContainer {
-        margin: 10px;
-      }
-
-      .m-skale__networkSwapButtonContainer {
-        margin: 10px;
-      }
+    > * + * {
+      margin-left: 20px;
     }
 
-    .m-skale__rechargeWarning,
-    .m-skale__enoughSKETHWarning {
-      margin-top: 20px;
-      margin-bottom: unset;
-      width: 400px;
-      font-weight: 600;
+    .m-skale__subTab {
+      background: none;
+      color: inherit;
+      border: none;
+      padding: 0;
+      font: inherit;
+      cursor: pointer;
+      outline: inherit;
 
       @include m-theme() {
-        color: themed($m-red);
+        color: themed($m-textColor--secondary);
+      }
+
+      &.m-skale__subTab--active {
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+        }
       }
     }
   }
